<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#00BCD4">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/spotifyStreamer"
        android:id="@+id/button"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#F08C35" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/scoresApp"
        android:id="@+id/button2"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="#F08C35"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/libraryApp"
        android:id="@+id/button3"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"
        android:id="@+id/button4"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:background="#F08C35" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/baconReader"
        android:id="@+id/button5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="#F08C35" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/capstoneApp"
        android:id="@+id/button6"
        android:background="#F44336"
        android:layout_below="@+id/button5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignLeft="@id/button5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/myNanodegreeApp"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
